--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 pgm
 **/*.o
 **/*.d
+.vs
+scenes/inf443/generator/build
+scenes/inf443/generator/generator.exe
+scenes/inf443/generator/generator.pdb
